Added some perf improvements to improve the usage of Integers
Signed-off-by: Navneet Verma <navneev@amazon.com>